added recommendation feature and payment successful redirect. Added Cassandra features--cart TTL release, event timeline, handle high throughput