@@ -1,4 +1,5 @@
 package org.example.carpet.security;
+
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -9,23 +10,15 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
-import java.util.Collections;
+
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.List;
 
-/**
- * JwtFilter：整合现有的 JwtUtil（Base64 token：email:timestamp）。
- * 规则：
- * - 白名单与 OPTIONS 直接放行；
- * - 没有 Authorization 头 -> 放行；
- * - 有 Bearer token -> 用 JwtUtil 解析 email 成功则注入 SecurityContext，失败则当匿名放行。
- */
 @Slf4j
 @Component
 @RequiredArgsConstructor
@@ -33,77 +26,70 @@ public class JwtFilter extends OncePerRequestFilter {
 
     private final JwtUtil jwtUtil;
 
+    /**
+     * 与 SecurityConfig 白名单保持一致（仅用于 shouldNotFilter 的快速跳过）
+     */
     // 与 SecurityConfig 保持一致的白名单（仅在过滤器层用于“快速跳过”，真正的授权还是由 SecurityConfig 控）
+
     private static final List<AntPathRequestMatcher> PUBLIC_MATCHERS = List.of(
+            new AntPathRequestMatcher("/"),
+            new AntPathRequestMatcher("/index.html"),
+            new AntPathRequestMatcher("/favicon.ico"),
+            new AntPathRequestMatcher("/assets/**"),
             new AntPathRequestMatcher("/auth/**"),
             new AntPathRequestMatcher("/account/create"),
             new AntPathRequestMatcher("/items/**"),
             new AntPathRequestMatcher("/inventory/**"),
             new AntPathRequestMatcher("/media/**"),
-            new AntPathRequestMatcher("/"),
-            new AntPathRequestMatcher("/index.html"),
-            new AntPathRequestMatcher("/favicon.ico"),
-            new AntPathRequestMatcher("/assets/**")
+            new AntPathRequestMatcher("/v3/api-docs/**"),
+            new AntPathRequestMatcher("/swagger-ui/**"),
+            new AntPathRequestMatcher("/swagger-ui.html"),
+            new AntPathRequestMatcher("/actuator/health")
     );
 
     @Override
     protected boolean shouldNotFilter(@NonNull HttpServletRequest request) {
         // 1) 预检请求直接跳过
-        if (HttpMethod.OPTIONS.matches(request.getMethod())) {
-            return true;
-        }
+        if (HttpMethod.OPTIONS.matches(request.getMethod())) return true;
         // 2) 白名单端点直接跳过
-        for (var m : PUBLIC_MATCHERS) {
-            if (m.matches(request)) {
-                return true;
-            }
-        }
-        // 其余路径交给 doFilterInternal 判断是否带 token
-        return false;
+        return PUBLIC_MATCHERS.stream().anyMatch(m -> m.matches(request));
     }
 
     @Override
     protected void doFilterInternal(
             @NonNull HttpServletRequest request,
             @NonNull HttpServletResponse response,
-            @NonNull FilterChain filterChain
-    ) throws ServletException, IOException {
+            @NonNull FilterChain chain) throws ServletException, IOException {
 
         try {
-            String authHeader = request.getHeader(HttpHeaders.AUTHORIZATION);
-
+            String header = request.getHeader(HttpHeaders.AUTHORIZATION);
             // 没有 Authorization 或不是 Bearer -> 放行（保持匿名态，由 SecurityConfig 决定是否允许）
-            if (authHeader == null || !authHeader.startsWith("Bearer ")) {
-                filterChain.doFilter(request, response);
+            if (header == null || !header.startsWith("Bearer ")) {
+                chain.doFilter(request, response);
                 return;
             }
 
-            String token = authHeader.substring("Bearer ".length()).trim();
-            if (token.isEmpty()) {
-                filterChain.doFilter(request, response);
-                return;
-            }
-
+            String token = header.substring(7).trim();
             // 用你的 JwtUtil 解析 email
             String email = jwtUtil.validateAndExtractEmail(token);
             if (email == null || email.isBlank()) {
-                // 解析失败，不抛异常，按匿名继续
-                log.debug("JWT parse failed or empty email, path={}, method={}", request.getRequestURI(), request.getMethod());
-                filterChain.doFilter(request, response);
+                // 非法 token -> 当匿名处理
+                chain.doFilter(request, response);
                 return;
             }
 
+            // 注入一个带 ROLE_USER 的认证对象；如需更细权限可扩展为从 token / DB 取角色
             // 构造一个最简单的认证对象（无角色）
-            List<GrantedAuthority> authorities = Collections.emptyList();
-            var authentication = new UsernamePasswordAuthenticationToken(email, null, authorities);
-
+            var auth = new UsernamePasswordAuthenticationToken(
+                    email, null, List.of(new SimpleGrantedAuthority("ROLE_USER")));
             // 写入 SecurityContext
-            SecurityContextHolder.getContext().setAuthentication(authentication);
+            SecurityContextHolder.getContext().setAuthentication(auth);
         } catch (Exception e) {
             // 不要中断请求，避免把所有错误变成 500/401；仅记录日志，按匿名继续
-            log.warn("JWT filter error: {}", e.getMessage());
+            log.warn("JWT parse error: {}", e.getMessage());
+            // 出错也不要打断链路，按匿名继续，避免 500
         }
 
-        filterChain.doFilter(request, response);
+        chain.doFilter(request, response);
     }
 }
